--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         align-items: center;
         justify-content: center;
         height: 30px;
+        font-family: mine;
         background-color: grey;
         border: 2px solid black;
     }
@@ -89,7 +90,7 @@
     }
 
     #icone{
-        width: 20px;
+        width: 90%;
     }
 
     @font-face {
@@ -106,10 +107,10 @@
             <a id="btn" href="">MultiPlayer</a>
             <a id="btn" href="">Minecraft Realms<img src="https://media.forgecdn.net/avatars/thumbnails/343/616/256/256/637488992894226978_animated.gif"></a>
             <div id="buttongap">
-                <a id="icon" href=""><img id="icone" src="https://bronghast014.weebly.com/uploads/1/2/4/1/124130735/635880300194194406_orig.png"></a>
+                <a id="icon" href=""><img id="icone" src="https://www.minecraft.net/content/dam/games/minecraft/key-art/MC-BABW_Image-0_BABW-Icon_250x250.png"></a>
                 <a id="btn2" href="">Options</a>
                 <a id="btn2" href="">Quit Game</a>
-                <a id="icon" href=""><img id="icone" src="https://bronghast014.weebly.com/uploads/1/2/4/1/124130735/635880300194194406_orig.png"></a>
+                <a id="icon" href=""><img id="icone" src="https://img.icons8.com/color/200/minecraft-logo.png"></a>
             </div>
         </div>
     </div>
