--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         height:35px;
         font-family: mine;
         letter-spacing: 2px;
-        background-color: grey;font-weight: lighter;
-
+        text-shadow: 2px 2px 1px rgb(19, 19, 19);   
+        background-size: 100%;
+        backdrop-filter: blur(100px);
+        background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
     }
     #btn img{
         width: 30px;
@@ -56,7 +58,8 @@
         margin-right: -50px
     }
 
-    a{
+    a{ 
+        text-shadow: 2px 2px 20px black;
         color: rgb(235, 227, 227);
         text-decoration: none;
     }
@@ -69,6 +72,10 @@
         justify-content: center;
     }
     #btn2{
+        text-shadow: 2px 2px 1px rgb(19, 19, 19);   
+        background-size: 300%;
+        backdrop-filter: blur(100px);
+        background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
         width: 140px;
         display: flex;
         align-items: center;
@@ -90,6 +97,9 @@
     }
 
     #icone{
+        background-size: 3000%;
+        backdrop-filter: blur(100px);
+        background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
         width: 90%;
     }
 
