--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
         letter-spacing: 2px;
         text-shadow: 2px 2px 1px rgb(19, 19, 19);   
         background-size: 100%;
-        backdrop-filter: blur(100px);
+        
         background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
+    }
+     #btn:hover, #btn2:hover, #icon:hover{
+        transform: scale(1.08);
     }
     #btn img{
         width: 30px;
@@ -74,7 +77,6 @@
     #btn2{
         text-shadow: 2px 2px 1px rgb(19, 19, 19);   
         background-size: 300%;
-        backdrop-filter: blur(100px);
         background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
         width: 140px;
         display: flex;
@@ -98,9 +100,8 @@
 
     #icone{
         background-size: 3000%;
-        backdrop-filter: blur(100px);
         background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
-        width: 90%;
+        width: 25px;
     }
 
     @font-face {
