--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         background-repeat: repeat;
     }
 
+    @keyframes bg {
+        from{
+            background-position-x: -100%;
+        }
+        to{
+            background-position-x: 100%;
+        }
+    }
+
     #menu {
         width: 100%;
         display: flex;
