--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 300px;
-        height:35px;
+        width: 340px;
+        height:45px;
         font-family: mine;
         letter-spacing: 2px;
         text-shadow: 2px 2px 1px rgb(19, 19, 19);   
@@ -65,7 +65,7 @@
         transform: scale(1.08);
     }
     #btn img{
-        width: 30px;
+        width: 45px;
         margin-left: 30px;
         margin-right: -50px
     }
@@ -87,19 +87,20 @@
         text-shadow: 2px 2px 1px rgb(19, 19, 19);   
         background-size: 300%;
         background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
-        width: 140px;
+        width: 160px;
+        border: 2px solid black;
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 30px;
+        height: 40px;
         font-family: mine;
         background-color: grey;
-        border: 2px solid black;
+        
     }
 
     #icon{
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         background-color: grey;
         border: 2px solid black;
         display: flex;
@@ -110,7 +111,7 @@
     #icone{
         background-size: 3000%;
         background-image: url(https://i.pinimg.com/736x/a0/ce/81/a0ce81f10591b00d6dff44ac87be5aec.jpg);
-        width: 25px;
+        width: 100%;
     }
 
     @font-face {
@@ -127,10 +128,10 @@
             <a id="btn" href="">MultiPlayer</a>
             <a id="btn" href="">Minecraft Realms<img src="https://media.forgecdn.net/avatars/thumbnails/343/616/256/256/637488992894226978_animated.gif"></a>
             <div id="buttongap">
-                <a id="icon" href=""><img id="icone" src="https://www.minecraft.net/content/dam/games/minecraft/key-art/MC-BABW_Image-0_BABW-Icon_250x250.png"></a>
+                <a id="icon" href=""><img id="icone" src="Minecraft.webp"></a>
                 <a id="btn2" href="">Options</a>
                 <a id="btn2" href="">Quit Game</a>
-                <a id="icon" href=""><img id="icone" src="https://img.icons8.com/color/200/minecraft-logo.png"></a>
+                <a id="icon" href=""><img id="icone" src="minecraft-logo.png"></a>
             </div>
         </div>
     </div>
